--- a/openapi/fleet-manager.yaml
+++ b/openapi/fleet-manager.yaml
@@ -401,7 +401,7 @@ paths:
       parameters:
         - $ref: '#/components/parameters/name'
         - $ref: '#/components/parameters/owner_user'
-        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/page_cursor'
         - $ref: '#/components/parameters/size'
   /api/rhacs/v1/cloud_providers:
     get:
@@ -435,7 +435,7 @@ paths:
                 500Example:
                   $ref: '#/components/examples/500Example'
       parameters:
-        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/page_cursor'
         - $ref: '#/components/parameters/size'
   /api/rhacs/v1/cloud_providers/{id}/regions:
     get:
@@ -470,7 +470,7 @@ paths:
                   $ref: '#/components/examples/500Example'
       parameters:
         - $ref: "#/components/parameters/id"
-        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/page_cursor'
         - $ref: '#/components/parameters/size'
         - $ref: '#/components/parameters/instance_type'
 
@@ -493,19 +493,15 @@ components:
     List:
       required:
         - kind
-        - page
         - size
-        - total
         - items
       type: object
       properties:
         kind:
           type: string
-        page:
-          type: integer
+        next_page_cursor:
+          type: string
         size:
-          type: integer
-        total:
           type: integer
       discriminator:
         propertyName: kind
@@ -576,9 +572,8 @@ components:
         - type: object
           example:
             kind: "CentralRequestList"
-            page: "1"
+            next_page_cursor: "ODBEN0RDQzgtNzE5MS00QzM2LUJCQjgtNTFEQzIzQjhCOUFECg=="
             size: "1"
-            total: "1"
             item:
               $ref: '#/components/examples/CentralRequestExample'
           properties:
@@ -645,9 +640,7 @@ components:
         - type: object
           example:
             kind: "CloudProviderList"
-            page: "1"
             size: "1"
-            total: "1"
             item:
               $ref: '#/components/examples/CloudProviderExample'
           properties:
@@ -662,9 +655,7 @@ components:
         - type: object
           example:
             kind: "CloudRegionList"
-            page: "1"
             size: "1"
-            total: "1"
             item:
               $ref: '#/components/examples/CloudRegionExample'
           properties:
@@ -742,16 +733,16 @@ components:
         items:
           type: string
         default: [ ]
-    page:
-      name: page
+    page_cursor:
+      name: page_cursor
       in: query
-      description: Page index
+      description: Page cursor, provided with each page in case more pages are remaining. If missing then the first page is returned.
       required: false
       schema:
         type: string
       examples:
-        page:
-          value: "1"
+        page_cursor:
+          value: "ODBEN0RDQzgtNzE5MS00QzM2LUJCQjgtNTFEQzIzQjhCOUFECg=="
     size:
       name: size
       in: query
