Add secrets/touch to Setup test secrets to fix CI failing Lint & Test on missing secrets/sentry.key file

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -106,7 +106,7 @@ jobs:
         run: make db/migrate
       - name: Setup tests secrets
         run: |
-          make ocm/setup aws/setup keycloak/setup dinosaurcert/setup observatorium/setup
+          make ocm/setup aws/setup keycloak/setup dinosaurcert/setup observatorium/setup secrets/touch
       - name: Lint & Test
         run: |
           export GOPATH=$(go env GOPATH)
