--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - prototype
     paths-ignore:
       - '*.md'
       - '*.sh'
@@ -116,9 +117,9 @@ jobs:
       - name: Build and publish image to quay.io
         if: github.event_name == 'push'
         env:
-          QUAY_USER_NAME: ${{ secrets.QUAY_BF2_USERNAME }}
-          QUAY_USER_PASSWORD: ${{ secrets.QUAY_BF2_PASSWORD }}
-          QUAY_ORG_NAME: "bf2fc6cc711aee1a0c2a82e312df7f2e6b37baa12bd9b1f2fd752e260d93a6f8144ac730947f25caa2bfe6ad0f410da360940ee6d28d6c1688d3822c4055650e"
+          QUAY_USER_NAME: ${{ secrets.QUAY_RHACS_ENG_FM_RW_USERNAME }}
+          QUAY_USER_PASSWORD: ${{ secrets.QUAY_RHACS_ENG_FM_RW_PASSWORD }}
+          QUAY_ORG_NAME: rhacs-eng
         run: |
           chmod +x ./build_deploy.sh
           ./build_deploy.sh
