Added supported_instance_type to dev config, file spacing, fixed error message referencing kafka

--- a/dev/config/dataplane-cluster-configuration-minikube.yaml
+++ b/dev/config/dataplane-cluster-configuration-minikube.yaml
@@ -25,6 +25,7 @@ clusters:
 #    schedulable: true
 #    status: ready
 #    provider_type: standalone
+#    supported_instance_type: "eval,standard"
 #    cluster_dns: kubernetes.docker.internal
  - name: minikube  # Uncomment if using minikube
    cluster_id: 1234567890abcdef1234567890abcdef
@@ -34,4 +35,5 @@ clusters:
    status: ready
    dinosaur_instance_limit: 5
    provider_type: standalone
+   supported_instance_type: "eval,standard"
    cluster_dns: cluster.local
