Use correct RDS secret name.

--- a/templates/secrets-template.yml
+++ b/templates/secrets-template.yml
@@ -106,7 +106,7 @@ objects:
 - apiVersion: v1
   kind: Secret
   metadata:
-    name: fleet-manager-rds
+    name: acs-fleet-manager-rds
   stringData:
     db.host: ${DATABASE_HOST}
     db.port: ${DATABASE_PORT}
