Added PGPASSWORD env

--- a/dev/env/.envrc
+++ b/dev/env/.envrc
@@ -2,5 +2,6 @@ export OCM_TOKEN=$(ocm token)
 export PATH="$(git rev-parse --show-toplevel)/scripts:$PATH"
 export GITROOT="$(git rev-parse --show-toplevel)"
 export POSTGRES_PASSWORD=$(cat "${GITROOT}/secrets/db.password")
+export PGPASSWORD="$POSTGRES_PASSWORD"
 export POSTGRES_USER=$(cat "${GITROOT}/secrets/db.user")
 export POSTGRES_DB=$(cat "${GITROOT}/secrets/db.name")
