--- a/dev/env/.envrc
+++ b/dev/env/.envrc
@@ -5,3 +5,4 @@ export POSTGRES_PASSWORD=$(cat "${GITROOT}/secrets/db.password")
 export PGPASSWORD="$POSTGRES_PASSWORD"
 export POSTGRES_USER=$(cat "${GITROOT}/secrets/db.user")
 export POSTGRES_DB=$(cat "${GITROOT}/secrets/db.name")
+export CLUSTER_ID="1234567890abcdef1234567890abcdef"
