--- a/docker/Dockerfile_template
+++ b/docker/Dockerfile_template
@@ -67,7 +67,8 @@ COPY . /fleet-manager/src/github.com/stackrox/acs-fleet-manager
 WORKDIR /fleet-manager/src/github.com/stackrox/acs-fleet-manager
 RUN make aws/setup
 RUN make ocm/setup
-RUN make keycloak/setup
+RUN make osd/setup
+RUN make redhatsso/setup
 RUN make dinosaurcert/setup
 RUN make observatorium/setup
 
