--- a/templates/secrets-template.yml
+++ b/templates/secrets-template.yml
@@ -127,8 +127,8 @@ objects:
     aws.accesskey: ${AWS_ACCESS_KEY}
     aws.accountid: ${AWS_ACCOUNT_ID}
     aws.secretaccesskey: ${AWS_SECRET_ACCESS_KEY}
-    keycloak-service.clientId: ${SSO_CLIENT_ID}
-    keycloak-service.clientSecret: ${SSO_CLIENT_SECRET}
+    redhatsso-service.clientId: ${SSO_CLIENT_ID}
+    redhatsso-service.clientSecret: ${SSO_CLIENT_SECRET}
     osd-idp-keycloak-service.clientId: ${OSD_IDP_SSO_CLIENT_ID}
     osd-idp-keycloak-service.clientSecret: ${OSD_IDP_SSO_CLIENT_SECRET}
     aws.route53accesskey: ${ROUTE53_ACCESS_KEY}
