--- a/templates/service-template.yml
+++ b/templates/service-template.yml
@@ -483,8 +483,8 @@ objects:
       aws.accesskey: badger
       aws.accountid: badger
       aws.secretaccesskey: badger
-      keycloak-service.clientId: badger
-      keycloak-service.clientSecret: badger
+      redhatsso-service.clientId: badger
+      redhatsso-service.clientSecret: badger
       osd-idp-keycloak-service.clientId: badger
       osd-idp-keycloak-service.clientSecret: badger
       aws.route53accesskey: badger
@@ -754,12 +754,11 @@ objects:
             - --db-sslmode=${DB_SSLMODE}
             - --db-max-open-connections=${DB_MAX_OPEN_CONNS}
             - --enable-db-debug=${ENABLE_DB_DEBUG}
+            - --redhat-sso-client-id-file=/secrets/service/redhatsso-service.clientId
+            - --redhat-sso-client-secret-file=/secrets/service/redhatsso-service.clientSecret
             - --ocm-client-id-file=/secrets/service/ocm-service.clientId
             - --ocm-client-secret-file=/secrets/service/ocm-service.clientSecret
-            - --sso-client-id-file=/secrets/service/keycloak-service.clientId
-            - --sso-client-secret-file=/secrets/service/keycloak-service.clientSecret
             - --sso-base-url=${SSO_BASE_URL}
-            - --sso-realm=${SSO_REALM}
             - --max-limit-for-sso-get-clients=${MAX_LIMIT_FOR_SSO_GET_CLIENTS}
             - --osd-idp-sso-realm=${OSD_IDP_SSO_REALM}
             - --osd-idp-sso-client-id-file=/secrets/service/osd-idp-keycloak-service.clientId
