ROX-9843: Add Helm subchart for dataplane terraforming of observability (#112)

--- a/dp-terraform/helm/rhacs-terraform/values.yaml
+++ b/dp-terraform/helm/rhacs-terraform/values.yaml
@@ -13,3 +13,15 @@ fleetshardSync:
 acsOperator:
   enabled: false
   startingCSV: rhacs-operator.v3.70.0
+
+# See available parameters in charts/observability/values.yaml
+# - enabled flag is used to completely enable/disable observability sub-chart
+observability:
+  enabled: true
+  github:
+    accessToken: ""
+    repository: ""
+  observatorium:
+    gateway: ""
+    metricsClientId: ""
+    metricsSecret: ""
